--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
     implementation("androidx.cardview:cardview:1.0.0")
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
