--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,6 @@ dependencies {
     //hilt
     implementation("com.google.dagger:hilt-android:2.42")
     kapt("com.google.dagger:hilt-android-compiler:2.42")
+
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 }
